# pixelmines

./: CMakeLists.txt  main.cpp
architecture/: GameCore.puml  ObjectGameCore.puml  Playground.puml  ResourceManager.puml  SqlManager.puml
docs/: annotated.html  annotated_dup.js  classapp_1_1managers_1_1_game_interactor-members.html  classapp_1_1managers_1_1_game_interactor.html  classapp_1_1managers_1_1_game_interactor.js  classapp_1_1managers_1_1_game_interactor__coll__graph.dot  classapp_1_1managers_1_1_game_manager-members.html  classapp_1_1managers_1_1_game_manager.html  classapp_1_1managers_1_1_game_manager.js  classapp_1_1managers_1_1_game_manager__coll__graph.dot  classapp_1_1managers_1_1_i_update_interactor-members.html  classapp_1_1managers_1_1_i_update_interactor.html  classapp_1_1managers_1_1_i_update_interactor.js  classapp_1_1managers_1_1_i_update_interactor__coll__graph.dot  classapp_1_1managers_1_1_i_update_interactor__inherit__graph.dot  classapp_1_1managers_1_1_resource_manager-members.html  classapp_1_1managers_1_1_resource_manager.html  classapp_1_1managers_1_1_resource_manager.js  classapp_1_1managers_1_1_resource_manager__coll__graph.dot  classapp_1_1managers_1_1_session_interactor-members.html  classapp_1_1managers_1_1_session_interactor.html  (+339 more)
saper/: CMakeLists.txt  main.cpp
saper/app/: CMakeLists.txt
saper/app/managers/: CMakeLists.txt
saper/app/managers/game_manager/: game_interactor.cpp  game_interactor.h  game_manager.cpp  game_manager.h
saper/app/managers/resource_manager/: i_update_interactor.h  resource_manager.cpp  resource_manager.h
saper/app/managers/resource_manager/file_collector/: file_collections.h  file_hierarchy.cpp  file_hierarchy.h  file_set.cpp  file_set.h  file_set_loader.cpp  file_set_loader.h
saper/app/managers/session_manager/: session_interactor.cpp  session_interactor.h  session_manager.cpp  session_manager.h
saper/app/managers/settings_manager/: settings_interactor.cpp  settings_interactor.h  settings_manager.cpp  settings_manager.h
saper/app/managers/sql_manager/: sql_handler.h  sql_manager.h  sql_query.h
saper/app/managers/texture_manager/: texture_interactor.cpp  texture_interactor.h  texture_manager.cpp  texture_manager.h
saper/core/: CMakeLists.txt
saper/core/game/: field.cpp  field.h  minefield.cpp  minefield.h  minefield_interactor.h  minefield_storage.cpp  minefield_storage.h  minefiled_interactor.cpp
saper/core/playground/: minefield_model.cpp  minefield_model.h
saper/resources/: settings.json
saper/ui/: CMakeLists.txt
saper/ui/gui/: CMakeLists.txt  Main.qml
saper/ui/gui/component/: Board.qml
saper/ui/gui/pages/: GamePage.qml  MainPage.qml
saper/ui/uikit/: AdaptiveButton.qml  AdaptiveCheckbox.qml  AdaptiveSlider.qml  Button.qml  CMakeLists.txt  DirectionButton.qml  PImage.qml  Ptext.qml
saper/utility/: CMakeLists.txt  utility.h
(+102 files in other folders)
